# Modern-Cpp-Assignments

./: .gitignore  README.md
OpenCV/: CMakeLists.txt  build.sh  main.cpp
OpenCV/sift_discriptor/: CMakeLists.txt  sift.cpp  sift.hpp
homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeLists.txt  build.sh  main  restart.sh
homework_1/task_2/log/: latest_list
homework_2/task_1/: CMakeLists.txt
homework_3/: fmt
homework_3/src/: image_browser.cpp  main.cpp
homework_4/: CMakeLists.txt  build.sh
homework_4/include/: homework_4.h
homework_4/include/header/: ipb_algorithm.hpp  named_vector.hpp
homework_4/src/: CMakeLists.txt  ipb_algorithm.cpp  main.cpp  named_vector.cpp
homework_4/tests/: test_named_vector.cpp
homework_5/: CMakeLists.txt  build.sh  remove.sh
homework_5/include/: convert_dataset.hpp  homework_5.h  serialize.hpp
homework_5/src/: CMakeLists.txt  convert_dataset.cpp  main.cpp  serialize.cpp
homework_6/: CMakeLists.txt
homework_6/include/: homework_6.h
homework_6/io_tools/: io_tools.cpp
homework_6/src/: homework_6.cpp
homework_6/tests/: CMakeLists.txt  image_test  test_init.cpp
homework_7/: CMakeLists.txt  README.md  build.sh  test.cpp
homework_7/include/: homework_7.h
homework_7/lib/: CMakeLists.txt
homework_7/lib/bow_dictionary/: CMakeLists.txt  bow_dictionary.cpp  bow_dictionary.hpp
homework_7/lib/kmeans/: CMakeLists.txt  kmeans.cpp  kmeans.hpp
homework_7/lib/serialization/: CMakeLists.txt  convert_dataset.cpp  serialize.cpp
homework_7/src/: CMakeLists.txt  main.cpp
homework_7/tests/: CMakeLists.txt
homework_8/task_1/: CMakeLists.txt  build_sys.sh  stack_mem.cpp
homework_8/task_2/: CMakeLists.txt
homework_8/task_2/include/: homework_8.h
homework_8/task_2/io_tools/: io_tools.cpp
homework_8/task_2/src/: homework_8.cpp
homework_8/task_2/tests/: CMakeLists.txt
nacho/hw/homework_1/task_2/: README.md
nacho/hw/homework_1/task_2/src/: CMakeLists.txt
nacho/hw/homework_2/task_1/: main
nacho/hw/homework_2/task_1/src/: main.cpp
nacho/hw/homework_2/task_2/: CMakeLists.txt
nacho/hw/homework_2/task_2/src/: main.cpp
nacho/hw/homework_3/: CMakeLists.txt  build.sh
nacho/hw/homework_3/src/: CMakeLists.txt  html_writer.cpp
nacho/hw/homework_3/web_app/: example.html
